0.6.7/io.gladed.watchable/index.md
[io.gladed.watchable](./index.md)

## Package io.gladed.watchable

### Types

| Name | Summary |
|---|---|
| [Change](-change/index.md) | `interface Change<out T, out V>`<br>Describes a change to an object of type [T](-change/index.md#T) which contains values of type [V](-change/index.md#V). |
| [GroupChange](-group-change/index.md) | `data class GroupChange<out T, out V, C : `[`Change`](-change/index.md)`<`[`T`](-group-change/index.md#T)`, `[`V`](-group-change/index.md#V)`>> : `[`Change`](-change/index.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`Watchable`](-watchable/index.md)`<`[`T`](-group-change/index.md#T)`, `[`V`](-group-change/index.md#V)`, `[`C`](-group-change/index.md#C)`>>, `[`Watchable`](-watchable/index.md)`<`[`T`](-group-change/index.md#T)`, `[`V`](-group-change/index.md#V)`, `[`C`](-group-change/index.md#C)`>>`<br>A single change to a single watchable in a group. |
| [ListChange](-list-change/index.md) | `sealed class ListChange<T> : `[`Change`](-change/index.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-list-change/index.md#T)`>, `[`T`](-list-change/index.md#T)`>`<br>Describes a change to a [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html). |
| [MapChange](-map-change/index.md) | `sealed class MapChange<K, out V> : `[`Change`](-change/index.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-map-change/index.md#K)`, `[`V`](-map-change/index.md#V)`>, `[`V`](-map-change/index.md#V)`>`<br>Describes a change to a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html). |
| [MutableWatchable](-mutable-watchable/index.md) | `interface MutableWatchable<T, V, M : `[`T`](-mutable-watchable/index.md#T)`, C : `[`Change`](-change/index.md)`<`[`T`](-mutable-watchable/index.md#T)`, `[`V`](-mutable-watchable/index.md#V)`>> : `[`Watchable`](-watchable/index.md)`<`[`T`](-mutable-watchable/index.md#T)`, `[`V`](-mutable-watchable/index.md#V)`, `[`C`](-mutable-watchable/index.md#C)`>`<br>A [Watchable](-watchable/index.md) which may be mutated in the form of an [M](-mutable-watchable/index.md#M) and bound to other [Watchable](-watchable/index.md) sources. |
| [MutableWatchableBase](-mutable-watchable-base/index.md) | `abstract class MutableWatchableBase<T, V, M : `[`T`](-mutable-watchable-base/index.md#T)`, C : `[`Change`](-change/index.md)`<`[`T`](-mutable-watchable-base/index.md#T)`, `[`V`](-mutable-watchable-base/index.md#V)`>> : `[`MutableWatchable`](-mutable-watchable/index.md)`<`[`T`](-mutable-watchable-base/index.md#T)`, `[`V`](-mutable-watchable-base/index.md#V)`, `[`M`](-mutable-watchable-base/index.md#M)`, `[`C`](-mutable-watchable-base/index.md#C)`>`<br>Base for implementing a type that is watchable, mutable, and bindable. |
| [ReadOnlyWatchableList](-read-only-watchable-list.md) | `interface ReadOnlyWatchableList<T> : `[`Watchable`](-watchable/index.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-read-only-watchable-list.md#T)`>, `[`T`](-read-only-watchable-list.md#T)`, `[`ListChange`](-list-change/index.md)`<`[`T`](-read-only-watchable-list.md#T)`>>, `[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-read-only-watchable-list.md#T)`>`<br>A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) which may not be modified by the reference holder. |
| [ReadOnlyWatchableMap](-read-only-watchable-map.md) | `interface ReadOnlyWatchableMap<K, out V> : `[`Watchable`](-watchable/index.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>, `[`V`](-read-only-watchable-map.md#V)`, `[`MapChange`](-map-change/index.md)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>>, `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>`<br>A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) which may not be modified by the reference holder. |
| [ReadOnlyWatchableSet](-read-only-watchable-set.md) | `interface ReadOnlyWatchableSet<T> : `[`Watchable`](-watchable/index.md)`<`[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-read-only-watchable-set.md#T)`>, `[`T`](-read-only-watchable-set.md#T)`, `[`SetChange`](-set-change/index.md)`<`[`T`](-read-only-watchable-set.md#T)`>>, `[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-read-only-watchable-set.md#T)`>`<br>A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) which may not be modified by the reference holder. |
| [ReadOnlyWatchableValue](-read-only-watchable-value.md) | `interface ReadOnlyWatchableValue<T> : `[`Watchable`](-watchable/index.md)`<`[`T`](-read-only-watchable-value.md#T)`, `[`T`](-read-only-watchable-value.md#T)`, `[`ValueChange`](-value-change/index.md)`<`[`T`](-read-only-watchable-value.md#T)`>>`<br>A [Watchable](-watchable/index.md) value of type [T](-read-only-watchable-value.md#T) which may not be replaced by the reference holder. |
| [SetChange](-set-change/index.md) | `sealed class SetChange<T> : `[`Change`](-change/index.md)`<`[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-set-change/index.md#T)`>, `[`T`](-set-change/index.md#T)`>`<br>Describes a change to a [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html). |
| [SimpleChange](-simple-change/index.md) | `data class SimpleChange<out T>`<br>Describes a change in the simplest possible form. |
| [ValueChange](-value-change/index.md) | `data class ValueChange<T> : `[`Change`](-change/index.md)`<`[`T`](-value-change/index.md#T)`, `[`T`](-value-change/index.md#T)`>`<br>Describes the replacement of a value. |
| [WatchHandle](-watch-handle/index.md) | `interface WatchHandle`<br>Allows management over a watch operation. |
| [Watchable](-watchable/index.md) | `interface Watchable<out T, out V, out C : `[`Change`](-change/index.md)`<`[`T`](-watchable/index.md#T)`, `[`V`](-watchable/index.md#V)`>>`<br>Wraps container [T](-watchable/index.md#T) (having objects of type [V](-watchable/index.md#V)) so that it may be watched for changes (of type [C](-watchable/index.md#C)). |
| [WatchableGroup](-watchable-group/index.md) | `class WatchableGroup<out T, out V, C : `[`Change`](-change/index.md)`<`[`T`](-watchable-group/index.md#T)`, `[`V`](-watchable-group/index.md#V)`>> : `[`Watchable`](-watchable/index.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`Watchable`](-watchable/index.md)`<`[`T`](-watchable-group/index.md#T)`, `[`V`](-watchable-group/index.md#V)`, `[`C`](-watchable-group/index.md#C)`>>, `[`Watchable`](-watchable/index.md)`<`[`T`](-watchable-group/index.md#T)`, `[`V`](-watchable-group/index.md#V)`, `[`C`](-watchable-group/index.md#C)`>, `[`GroupChange`](-group-change/index.md)`<`[`T`](-watchable-group/index.md#T)`, `[`V`](-watchable-group/index.md#V)`, `[`C`](-watchable-group/index.md#C)`>>`<br>A group of [Watchable](-watchable/index.md) objects that can be watched for any change, which arrives as a [GroupChange](-group-change/index.md). |
| [WatchableList](-watchable-list/index.md) | `class WatchableList<T> : `[`MutableWatchableBase`](-mutable-watchable-base/index.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-watchable-list/index.md#T)`>, `[`T`](-watchable-list/index.md#T)`, `[`MutableList`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-list/index.html)`<`[`T`](-watchable-list/index.md#T)`>, `[`ListChange`](-list-change/index.md)`<`[`T`](-watchable-list/index.md#T)`>>, `[`ReadOnlyWatchableList`](-read-only-watchable-list.md)`<`[`T`](-watchable-list/index.md#T)`>`<br>A [Watchable](-watchable/index.md) wrapper for a [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) which may also be modified or bound. Use [watchableListOf](watchable-list-of.md) to create. |
| [WatchableMap](-watchable-map/index.md) | `class WatchableMap<K, V> : `[`MutableWatchableBase`](-mutable-watchable-base/index.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>, `[`V`](-watchable-map/index.md#V)`, `[`MutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-map/index.html)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>, `[`MapChange`](-map-change/index.md)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>>, `[`ReadOnlyWatchableMap`](-read-only-watchable-map.md)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>`<br>A [Watchable](-watchable/index.md) wrapper for a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) which may also be modified or bound. Use [watchableMapOf](watchable-map-of.md) to create. |
| [WatchableSet](-watchable-set/index.md) | `class WatchableSet<T> : `[`MutableWatchableBase`](-mutable-watchable-base/index.md)`<`[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-watchable-set/index.md#T)`>, `[`T`](-watchable-set/index.md#T)`, `[`MutableSet`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-set/index.html)`<`[`T`](-watchable-set/index.md#T)`>, `[`SetChange`](-set-change/index.md)`<`[`T`](-watchable-set/index.md#T)`>>, `[`ReadOnlyWatchableSet`](-read-only-watchable-set.md)`<`[`T`](-watchable-set/index.md#T)`>`<br>A [Watchable](-watchable/index.md) wrapper for a [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) which may also be modified or bound. Use [watchableSetOf](watchable-set-of.md) to create. |
| [WatchableValue](-watchable-value/index.md) | `class WatchableValue<T> : `[`MutableWatchableBase`](-mutable-watchable-base/index.md)`<`[`T`](-watchable-value/index.md#T)`, `[`T`](-watchable-value/index.md#T)`, `[`T`](-watchable-value/index.md#T)`, `[`ValueChange`](-value-change/index.md)`<`[`T`](-watchable-value/index.md#T)`>>, `[`ReadOnlyWatchableValue`](-read-only-watchable-value.md)`<`[`T`](-watchable-value/index.md#T)`>`<br>A [Watchable](-watchable/index.md) value of [T](-watchable-value/index.md#T) which may also be replaced or bound. Use [watchableValueOf](watchable-value-of.md) to create. |

### Extensions for External Classes

| Name | Summary |
|---|---|
| [kotlin.collections.Collection](kotlin.collections.-collection/index.md) |  |
| [kotlin.collections.Map](kotlin.collections.-map/index.md) |  |
| [kotlinx.coroutines.CoroutineScope](kotlinx.coroutines.-coroutine-scope/index.md) |  |

### Functions

| Name | Summary |
|---|---|
| [group](group.md) | `fun <T, V, C : `[`Change`](-change/index.md)`<`[`T`](group.md#T)`, `[`V`](group.md#V)`>> group(vararg watchables: `[`Watchable`](-watchable/index.md)`<`[`T`](group.md#T)`, `[`V`](group.md#V)`, `[`C`](group.md#C)`>): `[`WatchableGroup`](-watchable-group/index.md)`<`[`T`](group.md#T)`, `[`V`](group.md#V)`, `[`C`](group.md#C)`>`<br>Create and return a group of watchable objects that itself is watchable. |
| [toWatchableValue](to-watchable-value.md) | `fun <T> `[`T`](to-watchable-value.md#T)`.toWatchableValue(): `[`WatchableValue`](-watchable-value/index.md)`<`[`T`](to-watchable-value.md#T)`>`<br>Convert this [T](to-watchable-value.md#T) to a watchable value of [T](to-watchable-value.md#T). |
| [watchableListOf](watchable-list-of.md) | `fun <T> watchableListOf(vararg values: `[`T`](watchable-list-of.md#T)`): `[`WatchableList`](-watchable-list/index.md)`<`[`T`](watchable-list-of.md#T)`>`<br>Return a new [WatchableList](-watchable-list/index.md) containing [values](watchable-list-of.md#io.gladed.watchable$watchableListOf(kotlin.Array((io.gladed.watchable.watchableListOf.T)))/values). |
| [watchableMapOf](watchable-map-of.md) | `fun <K, V> watchableMapOf(vararg values: `[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](watchable-map-of.md#K)`, `[`V`](watchable-map-of.md#V)`>): `[`WatchableMap`](-watchable-map/index.md)`<`[`K`](watchable-map-of.md#K)`, `[`V`](watchable-map-of.md#V)`>`<br>Return a new [WatchableMap](-watchable-map/index.md) containing a map of [values](watchable-map-of.md#io.gladed.watchable$watchableMapOf(kotlin.Array((kotlin.Pair((io.gladed.watchable.watchableMapOf.K, io.gladed.watchable.watchableMapOf.V)))))/values). |
| [watchableSetOf](watchable-set-of.md) | `fun <T> watchableSetOf(vararg values: `[`T`](watchable-set-of.md#T)`): `[`WatchableSet`](-watchable-set/index.md)`<`[`T`](watchable-set-of.md#T)`>`<br>Return a new [WatchableSet](-watchable-set/index.md) containing [values](watchable-set-of.md#io.gladed.watchable$watchableSetOf(kotlin.Array((io.gladed.watchable.watchableSetOf.T)))/values). |
| [watchableValueOf](watchable-value-of.md) | `fun <T> watchableValueOf(value: `[`T`](watchable-value-of.md#T)`): `[`WatchableValue`](-watchable-value/index.md)`<`[`T`](watchable-value-of.md#T)`>`<br>Return a new [WatchableValue](-watchable-value/index.md) wrapping [value](watchable-value-of.md#io.gladed.watchable$watchableValueOf(io.gladed.watchable.watchableValueOf.T)/value). |
